# huskybot_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/huskybot_camera/lib/huskybot_camera/: multicamera_publisher
install/huskybot_camera/share/huskybot_camera/: README.md  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/huskybot_camera/share/huskybot_camera/launch/: camera.launch.py
install/huskybot_multicam_parallel/lib/huskybot_multicam_parallel/: multicam_parallel_node  single_camera_processor
install/huskybot_multicam_parallel/share/huskybot_multicam_parallel/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/huskybot_multicam_parallel/share/huskybot_multicam_parallel/launch/: multicam_parallel_pipeline.launch.py
install/ros_deep_learning/share/ros_deep_learning/: package.bash  package.zsh
install/velodyne/share/velodyne/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne/share/velodyne/cmake/: velodyneConfig-version.cmake  velodyneConfig.cmake
install/velodyne/share/velodyne/environment/: ament_prefix_path.dsv  path.dsv
install/velodyne/share/velodyne/launch/: velodyne-all-nodes-VLP16-composed-launch.py  velodyne-all-nodes-VLP16-launch.py  velodyne-all-nodes-VLP32C-composed-launch.py  velodyne-all-nodes-VLP32C-launch.py  velodyne-all-nodes-VLS128-composed-launch.py  velodyne-all-nodes-VLS128-launch.py
install/velodyne_driver/include/velodyne_driver/: driver.hpp  input.hpp  time_conversion.hpp
install/velodyne_driver/lib/velodyne_driver/: vdump  velodyne_driver_node
install/velodyne_driver/share/velodyne_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_driver/share/velodyne_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  velodyne_driverConfig-version.cmake  velodyne_driverConfig.cmake
install/velodyne_driver/share/velodyne_driver/config/: VLP16-velodyne_driver_node-params.yaml  VLP32C-velodyne_driver_node-params.yaml  VLS128-velodyne_driver_node-params.yaml
install/velodyne_driver/share/velodyne_driver/environment/: ament_prefix_path.dsv  path.dsv
install/velodyne_driver/share/velodyne_driver/launch/: velodyne_driver_node-VLP16-composed-launch.py  velodyne_driver_node-VLP16-launch.py  velodyne_driver_node-VLP32C-composed-launch.py  velodyne_driver_node-VLP32C-launch.py  velodyne_driver_node-VLS128-composed-launch.py  velodyne_driver_node-VLS128-launch.py
install/velodyne_laserscan/include/velodyne_laserscan/: velodyne_laserscan.hpp
install/velodyne_laserscan/lib/velodyne_laserscan/: velodyne_laserscan_node
install/velodyne_laserscan/share/velodyne_laserscan/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_laserscan/share/velodyne_laserscan/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  velodyne_laserscanConfig-version.cmake  velodyne_laserscanConfig.cmake
install/velodyne_laserscan/share/velodyne_laserscan/config/: default-velodyne_laserscan_node-params.yaml
install/velodyne_laserscan/share/velodyne_laserscan/environment/: ament_prefix_path.dsv  path.dsv
install/velodyne_laserscan/share/velodyne_laserscan/launch/: velodyne_laserscan_node-composed-launch.py  velodyne_laserscan_node-launch.py
install/velodyne_msgs/share/velodyne_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_msgs/share/velodyne_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  velodyne_msgsConfig-version.cmake  velodyne_msgsConfig.cmake
install/velodyne_msgs/share/velodyne_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/velodyne_msgs/share/velodyne_msgs/msg/: VelodynePacket.idl  VelodynePacket.msg  VelodyneScan.idl  VelodyneScan.msg
install/velodyne_pointcloud/include/velodyne_pointcloud/: calibration.hpp  datacontainerbase.hpp  organized_cloudXYZIRT.hpp  pointcloudXYZIRT.hpp  rawdata.hpp  transform.hpp
install/velodyne_pointcloud/lib/velodyne_pointcloud/: velodyne_transform_node
install/velodyne_pointcloud/share/velodyne_pointcloud/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_pointcloud/share/velodyne_pointcloud/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+4 more)
log/: latest_build
src/huskybot_camera/: README.md  package.xml  setup.cfg  setup.py
src/huskybot_camera/huskybot_camera/: multicamera_publisher.py
src/huskybot_camera/launch/: camera.launch.py  camera_enhanced.launch.py  camera_jetson_optimized.launch.py  multicamera.launch.py
src/huskybot_deepstream_ultra/: README.md  package.xml  setup.py
src/huskybot_deepstream_ultra/config/: ultra_config.yaml  ultra_visualization.rviz
src/huskybot_deepstream_ultra/huskybot_deepstream_ultra/: __init__.py  performance_monitor.py  tensorrt_converter.py  ultra_deepstream_node.py
src/huskybot_deepstream_ultra/launch/: ultra_deepstream_pipeline.launch.py
src/huskybot_deepstream_ultra/resource/: huskybot_deepstream_ultra
src/huskybot_deepstream_ultra/scripts/: build_and_test.sh  git_cleanup.sh
src/huskybot_multicam_parallel/: package.xml  setup.cfg  setup.py
src/huskybot_multicam_parallel/huskybot_multicam_parallel/: multicam_parallel_node.py  single_camera_processor.py
src/huskybot_multicam_parallel/launch/: multicam_parallel_pipeline.launch.py
src/velodyne/: README.md
(+80 files in other folders)
